@@ -2007,7 +2007,7 @@ Define a new function,
 .
 The first command in
 .I expansion
-is replaced with it's whatis value
+is replaced with its whats value
 to prevent recursion.
 This can be used to serve a somewhat similar purpose as in bash.
 For example, the following will force ls to use color,
@@ -2408,7 +2408,7 @@ If no
 .I pid
 is specified, waits for any child process to exit.
 .TP
-.Cr "whatis \fIprogam ...\fP"
+.Cr "whats \fIprogam ...\fP"
 For each named 
 .IR program ,
 prints the pathname, primitive, lambda, or code fragment which
@@ -2739,7 +2739,7 @@ the command
 .Cr "%seq \fIcmd ...\fP"
 Runs the commands, in order.
 .TP
-.Cr "%whatis \fIprogram ...\fP"
+.Cr "%whats \fIprogram ...\fP"
 For each named 
 .IR program ,
 returns the pathname, primitive, lambda, or code fragment which
@@ -2876,7 +2876,7 @@ apids	here	run
 close	home	seq
 cmp	newfd	split
 count	openfile	var
-dup	parse	whatis
+dup	parse	whats
 flatten	pipe
 fsplit	read
 .ft R
