@@ -9,7 +9,7 @@ is a filter (standard input to standard output) that indents
 .B xs
 function code, changing the code from its canonical form (e.g. as the
 result of
-.IR whatis )
+.IR whats )
 to a form that uses indentation to illustrate the relationships among the
 nodes of the syntax tree. Words present on the command line are printed on
 the first line of output.
